--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,10 +15,14 @@
 
 /* label focus color */
 .input-field input[type=number]:focus + label {
- color: #1e88e5;
+ color: #7cb342;
 }
 /* label underline focus color */
 .input-field input[type=number]:focus {
-  border-bottom: 1px solid #1e88e5;
-  box-shadow: 0 1px 0 0 #1e88e5;
+  border-bottom: 1px solid #7cb342;
+  box-shadow: 0 1px 0 0 #7cb342;
+}
+
+.preferred {
+  background-color: #7cb342 !important;
 }
